--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "@microsoft/sp-build-web": "^1.4.1",
     "@microsoft/sp-core-library": "~1.4.1",
     "@microsoft/sp-office-ui-fabric-core": "~1.4.1",
-    "@microsoft/sp-webpart-base": "~1.4.1",
+    "@microsoft/sp-webpart-base": "^1.4.1",
+    "@microsoft/sp-webpart-workbench": "^1.4.1",
+    "@types/mocha": "^2.2.48",
     "@types/react": "15.0.38",
     "@types/react-addons-shallow-compare": "0.14.17",
     "@types/react-addons-test-utils": "0.14.15",
     "@types/react-addons-update": "0.14.14",
-    "@types/react-dnd": "~2.0.34",
+    "@types/react-dnd": "^2.0.36",
     "@types/react-dom": "0.14.18",
-    "@types/webpack-env": ">=1.12.1 <1.14.0",
-    "moment": "~2.22.0",
+    "@types/webpack-env": "^1.13.6",
+    "moment": "^2.22.1",
     "react": "15.4.2",
     "react-dnd": "~2.5.4",
     "react-dnd-html5-backend": "~2.5.4",
